--- a/Module 2/Exercise_1/public/index.html
+++ b/Module 2/Exercise_1/public/index.html
@@ -4,9 +4,43 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Where is your location?</title>
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.8.0/dist/leaflet.css"
+    integrity="sha512-hoalWLoI8r4UszCkZ5kL8vayOGVae1oxXe/2A4AO6J9+580uKHDO3JdHb7NzwwzK5xr/Fs0W40kiNHxM9vyTtQ=="
+    crossorigin=""/>
+     <!-- Make sure you put this AFTER Leaflet's CSS -->
+    <script src="https://unpkg.com/leaflet@1.8.0/dist/leaflet.js"
+    integrity="sha512-BB3hKbKWOc9Ez/TAwyWxNXeoV9c1v6FIeYiBieIWkpLjauysF18NzgR1MBNBXf8/KABdlkX68nAhlwcDFLGPCQ=="
+    crossorigin=""></script>
 </head>
 <body>
-    <a href="whereiss.html">Go to find Iss location</a>
+    <h1>Where is your Location</h1>
+    <style>#map { height: 480px; }</style>
+    <div id="map"></div>
+    <a href="whereiss.html">Current ISS location</a>
+    <script>
+        const myMap = L.map('map').setView([0, 0], 1);
+        const openMapAttribution = '&copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors';
+        const openMap = 'https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png';
+        L.tileLayer(openMap, {attribution:openMapAttribution}).addTo(myMap);
+        myMarker = L.marker([0, 0]).addTo(myMap)
+            .bindPopup('Your current location')
+            .openPopup();
+
+        if('geolocation' in navigator) {
+            console.log('geolocation is available')
+            navigator.geolocation.getCurrentPosition((position) => {
+                myMarker.setLatLng([position.coords.latitude , position.coords.longitude]);
+                myMap.setView([position.coords.latitude , position.coords.longitude], 18);
+            });
+        } else {
+            console.log('geolocation is not available')
+        }
+
+        
+
+        
+    </script>
+
 </body>
 </html>
